// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Daaas Notification component Daaas Notification error message renders correctly 1`] = `
<div
  className="DaaasNotification-root-1"
>
  <pure(HighlightOffIcon)
    className="DaaasNotification-severityIcon-4"
  />
  <WithStyles(Typography)
    variant="body2"
  >
    error message
  </WithStyles(Typography)>
  <WithStyles(IconButton)
    className="DaaasNotification-button-2"
    onClick={[Function]}
  >
    <pure(ClearIcon)
      className="DaaasNotification-deleteIcon-3"
    />
  </WithStyles(IconButton)>
</div>
`;

exports[`Daaas Notification component Daaas Notification success message renders correctly 1`] = `
<div
  className="DaaasNotification-root-1"
>
  <pure(CheckCircleIcon)
    className="DaaasNotification-severityIcon-4"
  />
  <WithStyles(Typography)
    variant="body2"
  >
    success message
  </WithStyles(Typography)>
  <WithStyles(IconButton)
    className="DaaasNotification-button-2"
    onClick={[Function]}
  >
    <pure(ClearIcon)
      className="DaaasNotification-deleteIcon-3"
    />
  </WithStyles(IconButton)>
</div>
`;

exports[`Daaas Notification component Daaas Notification warning message renders correctly 1`] = `
<div
  className="DaaasNotification-root-1"
>
  <pure(ErrorOutlineIcon)
    className="DaaasNotification-severityIcon-4"
  />
  <WithStyles(Typography)
    variant="body2"
  >
    warning message
  </WithStyles(Typography)>
  <WithStyles(IconButton)
    className="DaaasNotification-button-2"
    onClick={[Function]}
  >
    <pure(ClearIcon)
      className="DaaasNotification-deleteIcon-3"
    />
  </WithStyles(IconButton)>
</div>
`;
